# Changelog

All changes of DMT starting from version 1.3.0 will be documented in this file. A breaking change of DMT is defined as a change in one of the test cases for the core modules. If the API changes there, the MAJOR version has to be increased.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/), and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased] -

## [1.3.0] -

### Added

- Added ```__version__``` attribute and use it in setup.py
- Added ```_Excluded``` class to correctly implement the Verilog-AMS standard

### Changed

- renamed load_model method of MCard to load_model_parameters to better reflect what the method does.

### Move

- Moved the core in its own repository to protect proprietary data in the full repository