@@ -1,17 +1,3 @@
-
-[build-system]
-requires = [
-  "setuptools",
-  "wheel",
-  "numpy"
-]
-build-backend = "setuptools.build_meta"
-
-[install-system]
-requires = [
-  "numpy"
-]
-
 [tool.black]
 line-length = 100
 exclude = '''
